@@ -15,14 +15,14 @@
 
 package controllers;
 
-import akka.actor.ActorSystem;
 import be.objectify.deadbolt.java.actions.Group;
 import be.objectify.deadbolt.java.actions.Restrict;
 import controllers.base.BaseController;
 import controllers.iop.transfer.api.ExternalReservationHandler;
 import impl.EmailComposer;
 import impl.ExternalCourseHandler;
-import io.ebean.Ebean;
+import io.ebean.DB;
+import io.ebean.Transaction;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Date;
@@ -42,9 +42,11 @@ import models.ExaminationEventConfiguration;
 import models.Reservation;
 import models.Role;
 import models.User;
+import org.apache.pekko.actor.ActorSystem;
 import org.joda.time.DateTime;
-import play.Logger;
-import play.libs.concurrent.HttpExecutionContext;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import play.libs.concurrent.ClassLoaderExecutionContext;
 import play.mvc.Http;
 import play.mvc.Result;
 import play.mvc.With;
@@ -62,7 +64,7 @@ import validators.JsonValidator;
 public class EnrolmentController extends BaseController {
 
     private final boolean permCheckActive;
-    private static final Logger.ALogger logger = Logger.of(EnrolmentController.class);
+    private final Logger logger = LoggerFactory.getLogger(EnrolmentController.class);
 
     protected final EmailComposer emailComposer;
 
@@ -72,7 +74,7 @@ public class EnrolmentController extends BaseController {
 
     private final EnrolmentRepository enrolmentRepository;
 
-    private final HttpExecutionContext httpExecutionContext;
+    private final ClassLoaderExecutionContext httpExecutionContext;
 
     private final ActorSystem actor;
 
@@ -84,7 +86,7 @@ public class EnrolmentController extends BaseController {
         ExternalCourseHandler externalCourseHandler,
         ExternalReservationHandler externalReservationHandler,
         EnrolmentRepository enrolmentRepository,
-        HttpExecutionContext httpExecutionContext,
+        ClassLoaderExecutionContext httpExecutionContext,
         ActorSystem actor,
         ConfigReader configReader,
         DateTimeHandler dateTimeHandler
@@ -101,7 +103,7 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result listEnrolledExams(String code) {
-        List<Exam> exams = Ebean
+        List<Exam> exams = DB
             .find(Exam.class)
             .fetch("creator", "firstName, lastName")
             .fetch("examLanguages")
@@ -112,7 +114,7 @@ public class EnrolmentController extends BaseController {
             .eq("course.code", code)
             .eq("executionType.type", ExamExecutionType.Type.PUBLIC.toString())
             .eq("state", Exam.State.PUBLISHED)
-            .ge("examActiveEndDate", new Date())
+            .ge("periodEnd", new Date())
             .findList();
 
         return ok(exams);
@@ -120,7 +122,7 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result enrolmentsByReservation(Long id) {
-        List<ExamEnrolment> enrolments = Ebean
+        List<ExamEnrolment> enrolments = DB
             .find(ExamEnrolment.class)
             .fetch("user", "firstName, lastName, email")
             .fetch("exam")
@@ -135,7 +137,7 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result getEnrolledExamInfo(String code, Long id) {
-        Exam exam = Ebean
+        Exam exam = DB
             .find(Exam.class)
             .fetch("course")
             .fetch("course.organisation")
@@ -157,7 +159,7 @@ public class EnrolmentController extends BaseController {
             .findOne();
 
         if (exam == null) {
-            return notFound("sitnet_error_exam_not_found");
+            return notFound("i18n_error_exam_not_found");
         }
         return ok(exam);
     }
@@ -171,6 +173,7 @@ public class EnrolmentController extends BaseController {
             enrolment.setUser(user);
         }
         enrolment.setExam(exam);
+        enrolment.setRandomDelay();
         enrolment.save();
         return enrolment;
     }
@@ -178,19 +181,19 @@ public class EnrolmentController extends BaseController {
     @Authenticated
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result checkIfEnrolled(Long id, Http.Request request) {
-        Exam exam = Ebean.find(Exam.class, id);
+        Exam exam = DB.find(Exam.class, id);
         if (exam == null) {
             return badRequest();
         }
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         if (isAllowedToParticipate(exam, user)) {
             DateTime now = dateTimeHandler.adjustDST(new DateTime());
-            List<ExamEnrolment> enrolments = Ebean
+            List<ExamEnrolment> enrolments = DB
                 .find(ExamEnrolment.class)
                 .where()
                 .eq("user", user)
                 .eq("exam.id", id)
-                .gt("exam.examActiveEndDate", now.toDate())
+                .gt("exam.periodEnd", now.toDate())
                 .disjunction()
                 .eq("exam.state", Exam.State.PUBLISHED)
                 .eq("exam.state", Exam.State.STUDENT_STARTED)
@@ -201,7 +204,7 @@ public class EnrolmentController extends BaseController {
                 .collect(Collectors.toList());
             return ok(enrolments);
         }
-        return unauthorized("sitnet_no_trials_left");
+        return unauthorized("i18n_no_trials_left");
     }
 
     private boolean isActive(ExamEnrolment enrolment) {
@@ -224,9 +227,9 @@ public class EnrolmentController extends BaseController {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         ExamEnrolment enrolment;
         if (user.hasRole(Role.Name.STUDENT)) {
-            enrolment = Ebean.find(ExamEnrolment.class).fetch("exam").where().idEq(id).eq("user", user).findOne();
+            enrolment = DB.find(ExamEnrolment.class).fetch("exam").where().idEq(id).eq("user", user).findOne();
         } else {
-            enrolment = Ebean.find(ExamEnrolment.class).fetch("exam").where().idEq(id).findOne();
+            enrolment = DB.find(ExamEnrolment.class).fetch("exam").where().idEq(id).findOne();
         }
         if (enrolment == null) {
             return notFound("enrolment not found");
@@ -236,7 +239,7 @@ public class EnrolmentController extends BaseController {
             return forbidden();
         }
         if (enrolment.getReservation() != null || enrolment.getExaminationEventConfiguration() != null) {
-            return forbidden("sitnet_cancel_reservation_first");
+            return forbidden("i18n_cancel_reservation_first");
         }
         enrolment.delete();
         return ok();
@@ -249,7 +252,7 @@ public class EnrolmentController extends BaseController {
     public Result updateEnrolment(Long id, Http.Request request) {
         String info = request.attrs().getOptional(Attrs.ENROLMENT_INFORMATION).orElse(null);
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        ExamEnrolment enrolment = Ebean.find(ExamEnrolment.class).where().idEq(id).eq("user", user).findOne();
+        ExamEnrolment enrolment = DB.find(ExamEnrolment.class).where().idEq(id).eq("user", user).findOne();
         if (enrolment == null) {
             return notFound("enrolment not found");
         }
@@ -259,7 +262,7 @@ public class EnrolmentController extends BaseController {
     }
 
     private Optional<Exam> getExam(Long eid, ExamExecutionType.Type type) {
-        return Ebean
+        return DB
             .find(Exam.class)
             .where()
             .eq("id", eid)
@@ -273,18 +276,17 @@ public class EnrolmentController extends BaseController {
 
     private CompletionStage<Result> doCreateEnrolment(Long eid, ExamExecutionType.Type type, User user) {
         // Begin manual transaction
-        Ebean.beginTransaction();
-        try {
+        try (Transaction tx = DB.beginTransaction()) {
             // Take pessimistic lock for user to prevent multiple enrolments creating.
-            Ebean.find(User.class).forUpdate().where().eq("id", user.getId()).findOne();
+            DB.find(User.class).forUpdate().where().eq("id", user.getId()).findOne();
             Optional<Exam> possibleExam = getExam(eid, type);
             if (possibleExam.isEmpty()) {
-                return wrapAsPromise(notFound("sitnet_error_exam_not_found"));
+                return wrapAsPromise(notFound("i18n_error_exam_not_found"));
             }
             Exam exam = possibleExam.get();
 
             // Find existing enrolments for exam and user
-            List<ExamEnrolment> enrolments = Ebean
+            List<ExamEnrolment> enrolments = DB
                 .find(ExamEnrolment.class)
                 .fetch("reservation")
                 .fetch("examinationEventConfiguration")
@@ -301,7 +303,7 @@ public class EnrolmentController extends BaseController {
                     (ee.getUser() != null && ee.getUser().equals(user)) ||
                     (ee.getPreEnrolledUserEmail() != null && ee.getPreEnrolledUserEmail().equals(user.getEmail()))
                 )
-                .collect(Collectors.toList());
+                .toList();
 
             // already enrolled (regular examination)
             if (
@@ -311,7 +313,7 @@ public class EnrolmentController extends BaseController {
                         e.getExam().getImplementation() == Exam.Implementation.AQUARIUM && e.getReservation() == null
                     )
             ) {
-                return wrapAsPromise(forbidden("sitnet_error_enrolment_exists"));
+                return wrapAsPromise(forbidden("i18n_error_enrolment_exists"));
             }
             // already enrolled (BYOD examination)
             if (
@@ -322,7 +324,7 @@ public class EnrolmentController extends BaseController {
                         e.getExaminationEventConfiguration() == null
                     )
             ) {
-                return wrapAsPromise(forbidden("sitnet_error_enrolment_exists"));
+                return wrapAsPromise(forbidden("i18n_error_enrolment_exists"));
             }
             // reservation in effect
             if (
@@ -331,7 +333,7 @@ public class EnrolmentController extends BaseController {
                     .map(ExamEnrolment::getReservation)
                     .anyMatch(r -> r != null && r.toInterval().contains(dateTimeHandler.adjustDST(DateTime.now(), r)))
             ) {
-                return wrapAsPromise(forbidden("sitnet_reservation_in_effect"));
+                return wrapAsPromise(forbidden("i18n_reservation_in_effect"));
             }
             // examination event in effect
             if (
@@ -346,7 +348,7 @@ public class EnrolmentController extends BaseController {
                             .contains(dateTimeHandler.adjustDST(DateTime.now()))
                     )
             ) {
-                return wrapAsPromise(forbidden("sitnet_reservation_in_effect"));
+                return wrapAsPromise(forbidden("i18n_reservation_in_effect"));
             }
             List<ExamEnrolment> enrolmentsWithFutureReservations = enrolments
                 .stream()
@@ -354,7 +356,7 @@ public class EnrolmentController extends BaseController {
                     ee.getReservation() != null &&
                     ee.getReservation().toInterval().isAfter(dateTimeHandler.adjustDST(DateTime.now()))
                 )
-                .collect(Collectors.toList());
+                .toList();
             if (enrolmentsWithFutureReservations.size() > 1) {
                 logger.error(
                     "Several enrolments with future reservations found for user {} and exam {}",
@@ -365,7 +367,7 @@ public class EnrolmentController extends BaseController {
             }
             // reservation in the future, replace it
             if (!enrolmentsWithFutureReservations.isEmpty()) {
-                ExamEnrolment enrolment = enrolmentsWithFutureReservations.get(0);
+                ExamEnrolment enrolment = enrolmentsWithFutureReservations.getFirst();
                 Reservation reservation = enrolment.getReservation();
                 return externalReservationHandler
                     .removeReservation(reservation, user, "")
@@ -381,7 +383,7 @@ public class EnrolmentController extends BaseController {
                     e.getExaminationEventConfiguration() != null &&
                     e.getExaminationEventConfiguration().getExaminationEvent().toInterval(e.getExam()).isAfterNow()
                 )
-                .collect(Collectors.toList());
+                .toList();
             if (enrolmentsWithFutureExaminationEvents.size() > 1) {
                 logger.error(
                     "Several enrolments with future examination events found for user {} and exam {}",
@@ -392,13 +394,13 @@ public class EnrolmentController extends BaseController {
             }
             // examination event in the future, replace it
             if (!enrolmentsWithFutureExaminationEvents.isEmpty()) {
-                ExamEnrolment enrolment = enrolmentsWithFutureExaminationEvents.get(0);
+                ExamEnrolment enrolment = enrolmentsWithFutureExaminationEvents.getFirst();
                 enrolment.delete();
                 ExamEnrolment newEnrolment = makeEnrolment(exam, user);
                 return wrapAsPromise(ok(newEnrolment));
             }
             if (enrolments.size() == 1) {
-                ExamEnrolment enrolment = enrolments.get(0);
+                ExamEnrolment enrolment = enrolments.getFirst();
                 Reservation reservation = enrolment.getReservation();
                 if (
                     reservation != null &&
@@ -408,15 +410,12 @@ public class EnrolmentController extends BaseController {
                     enrolment.getExam().getState().equals(Exam.State.PUBLISHED)
                 ) {
                     // External reservation, assessment not returned yet. We must wait for it to arrive first
-                    return wrapAsPromise(forbidden("sitnet_enrolment_assessment_not_received"));
+                    return wrapAsPromise(forbidden("i18n_enrolment_assessment_not_received"));
                 }
             }
             ExamEnrolment newEnrolment = makeEnrolment(exam, user);
-            Ebean.commitTransaction();
+            tx.commit();
             return wrapAsPromise(ok(newEnrolment));
-        } finally {
-            // End transaction to release lock.
-            Ebean.endTransaction();
         }
     }
 
@@ -425,7 +424,7 @@ public class EnrolmentController extends BaseController {
             return doCreateEnrolment(id, ExamExecutionType.Type.PUBLIC, user);
         } else {
             logger.warn("Attempt to enroll for a course without permission from {}", user.toString());
-            return wrapAsPromise(forbidden("sitnet_error_access_forbidden"));
+            return wrapAsPromise(forbidden("i18n_error_access_forbidden"));
         }
     }
 
@@ -451,20 +450,20 @@ public class EnrolmentController extends BaseController {
     public CompletionStage<Result> createStudentEnrolment(Long eid, Http.Request request) {
         Optional<Long> uid = request.attrs().getOptional(Attrs.USER_ID);
         Optional<String> email = request.attrs().getOptional(Attrs.EMAIL);
-        Exam exam = Ebean.find(Exam.class, eid);
+        Exam exam = DB.find(Exam.class, eid);
         if (exam == null) {
-            return wrapAsPromise(notFound("sitnet_error_exam_not_found"));
+            return wrapAsPromise(notFound("i18n_error_exam_not_found"));
         }
         ExamExecutionType.Type executionType = ExamExecutionType.Type.valueOf(exam.getExecutionType().getType());
 
         User user;
         if (uid.isPresent()) {
-            user = Ebean.find(User.class, uid.get());
+            user = DB.find(User.class, uid.get());
             if (user == null) {
                 return wrapAsPromise(badRequest("user not found"));
             }
         } else if (email.isPresent()) {
-            List<User> users = Ebean
+            List<User> users = DB
                 .find(User.class)
                 .where()
                 .or()
@@ -475,7 +474,7 @@ public class EnrolmentController extends BaseController {
             if (users.isEmpty()) {
                 // Pre-enrolment
                 // Check that we will not create duplicate enrolments for same email address
-                List<ExamEnrolment> enrolments = Ebean
+                List<ExamEnrolment> enrolments = DB
                     .find(ExamEnrolment.class)
                     .where()
                     .eq("exam.id", eid)
@@ -489,7 +488,7 @@ public class EnrolmentController extends BaseController {
                 }
             } else if (users.size() == 1) {
                 // User with email already exists
-                user = users.get(0);
+                user = users.getFirst();
             } else {
                 // Multiple users with same email -> not good
                 return wrapAsPromise(internalServerError("multiple users found for email"));
@@ -525,7 +524,7 @@ public class EnrolmentController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result removeStudentEnrolment(Long id, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        ExamEnrolment enrolment = Ebean
+        ExamEnrolment enrolment = DB
             .find(ExamEnrolment.class)
             .where()
             .idEq(id)
@@ -541,7 +540,7 @@ public class EnrolmentController extends BaseController {
             .endJunction()
             .findOne();
         if (enrolment == null) {
-            return forbidden("sitnet_not_possible_to_remove_participant");
+            return forbidden("i18n_not_possible_to_remove_participant");
         }
         enrolment.delete();
         return ok();
@@ -563,7 +562,7 @@ public class EnrolmentController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result addExaminationEventConfig(Long enrolmentId, Long configId, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        Optional<ExamEnrolment> oee = Ebean
+        Optional<ExamEnrolment> oee = DB
             .find(ExamEnrolment.class)
             .where()
             .idEq(enrolmentId)
@@ -574,7 +573,7 @@ public class EnrolmentController extends BaseController {
             return notFound("enrolment not found");
         }
         ExamEnrolment enrolment = oee.get();
-        Optional<ExaminationEventConfiguration> optionalConfig = Ebean
+        Optional<ExaminationEventConfiguration> optionalConfig = DB
             .find(ExaminationEventConfiguration.class)
             .fetch("examEnrolments")
             .where()
@@ -588,7 +587,7 @@ public class EnrolmentController extends BaseController {
         ExaminationEventConfiguration config = optionalConfig.get();
         ExaminationEvent event = config.getExaminationEvent();
         if (config.getExamEnrolments().size() + 1 > event.getCapacity()) {
-            return forbidden("sitnet_error_max_enrolments_reached");
+            return forbidden("i18n_error_max_enrolments_reached");
         }
         enrolment.setExaminationEventConfiguration(config);
         enrolment.update();
@@ -609,7 +608,7 @@ public class EnrolmentController extends BaseController {
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public Result removeExaminationEventConfig(Long enrolmentId, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        Optional<ExamEnrolment> oee = Ebean
+        Optional<ExamEnrolment> oee = DB
             .find(ExamEnrolment.class)
             .where()
             .idEq(enrolmentId)
@@ -639,7 +638,7 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result removeExaminationEvent(Long configId) {
-        ExaminationEventConfiguration config = Ebean.find(ExaminationEventConfiguration.class, configId);
+        ExaminationEventConfiguration config = DB.find(ExaminationEventConfiguration.class, configId);
         if (config == null) {
             return badRequest();
         }
@@ -648,7 +647,7 @@ public class EnrolmentController extends BaseController {
         }
         ExaminationEvent event = config.getExaminationEvent();
         Exam exam = config.getExam();
-        Set<ExamEnrolment> enrolments = Ebean
+        Set<ExamEnrolment> enrolments = DB
             .find(ExamEnrolment.class)
             .fetch("user")
             .where()
@@ -683,9 +682,9 @@ public class EnrolmentController extends BaseController {
 
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result permitRetrial(Long id) {
-        ExamEnrolment enrolment = Ebean.find(ExamEnrolment.class, id);
+        ExamEnrolment enrolment = DB.find(ExamEnrolment.class, id);
         if (enrolment == null) {
-            return notFound("sitnet_not_found");
+            return notFound("i18n_not_found");
         }
         enrolment.setRetrialPermitted(true);
         enrolment.update();
