@@ -15,7 +15,6 @@
 
 package controllers;
 
-import akka.actor.ActorSystem;
 import be.objectify.deadbolt.java.actions.Group;
 import be.objectify.deadbolt.java.actions.Restrict;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -24,7 +23,7 @@ import controllers.base.BaseController;
 import controllers.iop.transfer.api.ExternalAttachmentLoader;
 import impl.AutoEvaluationHandler;
 import impl.EmailComposer;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.text.PathProperties;
 import java.io.IOException;
 import java.util.HashSet;
@@ -49,11 +48,13 @@ import models.json.CollaborativeExam;
 import models.questions.ClozeTestAnswer;
 import models.questions.EssayAnswer;
 import models.sections.ExamSectionQuestion;
+import org.apache.pekko.actor.ActorSystem;
 import org.joda.time.DateTime;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import play.Environment;
-import play.Logger;
 import play.db.ebean.Transactional;
-import play.libs.concurrent.HttpExecutionContext;
+import play.libs.concurrent.ClassLoaderExecutionContext;
 import play.mvc.Http;
 import play.mvc.Result;
 import play.mvc.With;
@@ -62,6 +63,7 @@ import sanitizers.Attrs;
 import sanitizers.ClozeTestAnswerSanitizer;
 import sanitizers.EssayAnswerSanitizer;
 import scala.concurrent.duration.Duration;
+import scala.jdk.javaapi.CollectionConverters;
 import security.Authenticated;
 import system.interceptors.ExamActionRouter;
 import system.interceptors.SensitiveDataPolicy;
@@ -75,14 +77,14 @@ public class ExaminationController extends BaseController {
     protected final EmailComposer emailComposer;
     protected final ExaminationRepository examinationRepository;
     protected final ActorSystem actor;
-    protected final HttpExecutionContext httpExecutionContext;
+    protected final ClassLoaderExecutionContext httpExecutionContext;
     private final AutoEvaluationHandler autoEvaluationHandler;
     protected final Environment environment;
     private final ExternalAttachmentLoader externalAttachmentLoader;
     private final ByodConfigHandler byodConfigHandler;
     protected final DateTimeHandler dateTimeHandler;
 
-    private static final Logger.ALogger logger = Logger.of(ExaminationController.class);
+    private final Logger logger = LoggerFactory.getLogger(ExaminationController.class);
 
     @Inject
     public ExaminationController(
@@ -91,7 +93,7 @@ public class ExaminationController extends BaseController {
         ActorSystem actor,
         AutoEvaluationHandler autoEvaluationHandler,
         Environment environment,
-        HttpExecutionContext httpExecutionContext,
+        ClassLoaderExecutionContext httpExecutionContext,
         ExternalAttachmentLoader externalAttachmentLoader,
         ByodConfigHandler byodConfigHandler,
         DateTimeHandler dateTimeHandler
@@ -289,7 +291,7 @@ public class ExaminationController extends BaseController {
             .thenApplyAsync(oe ->
                 oe.orElseGet(() -> {
                     User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-                    Exam exam = Ebean
+                    Exam exam = DB
                         .find(Exam.class)
                         .fetch("examSections.sectionQuestions.question")
                         .where()
@@ -297,7 +299,7 @@ public class ExaminationController extends BaseController {
                         .eq("hash", hash)
                         .findOne();
                     if (exam == null) {
-                        return notFound("sitnet_error_exam_not_found");
+                        return notFound("i18n_error_exam_not_found");
                     }
                     Optional<ExamParticipation> oep = findParticipation(exam, user);
                     Http.Session session = request.session().removing("ongoingExamHash");
@@ -334,9 +336,9 @@ public class ExaminationController extends BaseController {
             .thenApplyAsync(oe ->
                 oe.orElseGet(() -> {
                     User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-                    Exam exam = Ebean.find(Exam.class).where().eq("creator", user).eq("hash", hash).findOne();
+                    Exam exam = DB.find(Exam.class).where().eq("creator", user).eq("hash", hash).findOne();
                     if (exam == null) {
-                        return notFound("sitnet_error_exam_not_found");
+                        return notFound("i18n_error_exam_not_found");
                     }
                     Optional<ExamParticipation> oep = findParticipation(exam, user);
                     Http.Session session = request.session().removing("ongoingExamHash");
@@ -365,7 +367,7 @@ public class ExaminationController extends BaseController {
                 oe.orElseGet(() -> {
                     String essayAnswer = request.attrs().getOptional(Attrs.ESSAY_ANSWER).orElse(null);
                     Optional<Long> objectVersion = request.attrs().getOptional(Attrs.OBJECT_VERSION);
-                    ExamSectionQuestion question = Ebean.find(ExamSectionQuestion.class, questionId);
+                    ExamSectionQuestion question = DB.find(ExamSectionQuestion.class, questionId);
                     if (question == null) {
                         return forbidden();
                     }
@@ -394,8 +396,8 @@ public class ExaminationController extends BaseController {
                     List<Long> optionIds = StreamSupport
                         .stream(node.spliterator(), false)
                         .map(JsonNode::asLong)
-                        .collect(Collectors.toList());
-                    ExamSectionQuestion question = Ebean.find(ExamSectionQuestion.class, qid);
+                        .toList();
+                    ExamSectionQuestion question = DB.find(ExamSectionQuestion.class, qid);
                     if (question == null) {
                         return forbidden();
                     }
@@ -417,7 +419,7 @@ public class ExaminationController extends BaseController {
         return getEnrolmentError(hash, request)
             .thenApplyAsync(oe ->
                 oe.orElseGet(() -> {
-                    ExamSectionQuestion esq = Ebean.find(ExamSectionQuestion.class, questionId);
+                    ExamSectionQuestion esq = DB.find(ExamSectionQuestion.class, questionId);
                     if (esq == null) {
                         return forbidden();
                     }
@@ -436,7 +438,7 @@ public class ExaminationController extends BaseController {
     }
 
     private Optional<ExamParticipation> findParticipation(Exam exam, User user) {
-        return Ebean
+        return DB
             .find(ExamParticipation.class)
             .where()
             .eq("exam.id", exam.getId())
@@ -463,7 +465,7 @@ public class ExaminationController extends BaseController {
         // If this is null, it means someone is either trying to access an exam by wrong hash
         // or the reservation is not in effect right now.
         if (enrolment == null) {
-            return CompletableFuture.completedFuture(Optional.of(forbidden("sitnet_reservation_not_found")));
+            return CompletableFuture.completedFuture(Optional.of(forbidden("i18n_reservation_not_found")));
         }
         Exam exam = enrolment.getExam();
         boolean isByod = exam != null && exam.getImplementation() == Exam.Implementation.CLIENT_AUTH;
@@ -475,9 +477,9 @@ public class ExaminationController extends BaseController {
         } else if (isUnchecked) {
             return CompletableFuture.completedFuture(Optional.empty());
         } else if (enrolment.getReservation() == null) {
-            return CompletableFuture.completedFuture(Optional.of(forbidden("sitnet_reservation_not_found")));
+            return CompletableFuture.completedFuture(Optional.of(forbidden("i18n_reservation_not_found")));
         } else if (enrolment.getReservation().getMachine() == null) {
-            return CompletableFuture.completedFuture(Optional.of(forbidden("sitnet_reservation_machine_not_found")));
+            return CompletableFuture.completedFuture(Optional.of(forbidden("i18n_reservation_machine_not_found")));
         } else if (
             !environment.isDev() &&
             !enrolment.getReservation().getMachine().getIpAddress().equals(request.remoteAddress())
@@ -491,11 +493,11 @@ public class ExaminationController extends BaseController {
                         }
                         ExamRoom room = or.get();
                         String message =
-                            "sitnet_wrong_exam_machine " +
+                            "i18n_wrong_exam_machine " +
                             room.getName() +
                             ", " +
                             room.getMailAddress().toString() +
-                            ", sitnet_exam_machine " +
+                            ", i18n_exam_machine " +
                             enrolment.getReservation().getMachine().getName();
                         return Optional.of(forbidden(message));
                     },
@@ -508,7 +510,7 @@ public class ExaminationController extends BaseController {
     public static PathProperties getPath(boolean includeEnrolment) {
         String path =
             "(id, name, state, instruction, hash, duration, cloned, external, implementation, " +
-            "course(id, code, name), executionType(id, type), " + // (
+            "course(id, code, name), examType(id, type), executionType(id, type), " + // (
             "examParticipation(id), " + //
             "examLanguages(code), attachment(fileName), examOwners(firstName, lastName)" +
             "examInspections(*, user(id, firstName, lastName))" +
@@ -525,7 +527,7 @@ public class ExaminationController extends BaseController {
 
     private CompletionStage<Optional<Result>> getEnrolmentError(String hash, Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        ExamEnrolment enrolment = Ebean
+        ExamEnrolment enrolment = DB
             .find(ExamEnrolment.class)
             .where()
             .eq("exam.hash", hash)
@@ -543,7 +545,12 @@ public class ExaminationController extends BaseController {
             .scheduler()
             .scheduleOnce(
                 Duration.create(1, TimeUnit.SECONDS),
-                () -> AppUtil.notifyPrivateExamEnded(recipients, exam, emailComposer),
+                () ->
+                    AppUtil.notifyPrivateExamEnded(
+                        CollectionConverters.asScala(recipients).toSet(),
+                        exam,
+                        emailComposer
+                    ),
                 actor.dispatcher()
             );
     }
