@@ -19,22 +19,17 @@ import be.objectify.deadbolt.java.actions.Group;
 import be.objectify.deadbolt.java.actions.Restrict;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import controllers.base.BaseController;
 import controllers.iop.collaboration.api.CollaborativeExamLoader;
 import controllers.iop.transfer.api.ExternalReservationHandler;
 import exceptions.NotFoundException;
 import impl.EmailComposer;
-import io.ebean.Ebean;
-import io.ebean.ExpressionList;
+import io.ebean.DB;
 import io.ebean.FetchConfig;
-import io.ebean.Query;
 import io.ebean.text.PathProperties;
 import java.util.Date;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
@@ -57,6 +52,7 @@ import play.mvc.Result;
 import sanitizers.Attrs;
 import security.Authenticated;
 import system.interceptors.Anonymous;
+import util.datetime.DateTimeHandler;
 
 public class ReservationController extends BaseController {
 
@@ -69,14 +65,17 @@ public class ReservationController extends BaseController {
     @Inject
     protected ExternalReservationHandler externalReservationHandler;
 
+    @Inject
+    protected DateTimeHandler dateTimeHandler;
+
     @Authenticated
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result getExams(Http.Request request, Optional<String> filter) {
-        User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
-        PathProperties props = PathProperties.parse("(id, name)");
-        Query<Exam> q = Ebean.createQuery(Exam.class);
+        var user = request.attrs().get(Attrs.AUTHENTICATED_USER);
+        var props = PathProperties.parse("(id, name)");
+        var q = DB.createQuery(Exam.class);
         props.apply(q);
-        ExpressionList<Exam> el = q
+        var el = q
             .where()
             .isNull("parent") // only Exam prototypes
             .eq("state", Exam.State.PUBLISHED);
@@ -86,7 +85,7 @@ public class ReservationController extends BaseController {
         if (user.hasRole(Role.Name.TEACHER)) {
             el =
                 el
-                    .gt("examActiveEndDate", new Date())
+                    .gt("periodEnd", new Date())
                     .disjunction()
                     .eq("creator", user)
                     .eq("examOwners", user)
@@ -94,24 +93,23 @@ public class ReservationController extends BaseController {
                     .eq("shared", true)
                     .endJunction();
         }
-        List<Exam> exams = el.findList();
-        return ok(exams, props);
+        return ok(el.findList(), props);
     }
 
     @Restrict({ @Group("ADMIN") })
     public Result getExamRooms() {
-        List<ExamRoom> examRooms = Ebean.find(ExamRoom.class).select("id, name").fetch("examMachines", "id").findList();
+        var examRooms = DB.find(ExamRoom.class).select("id, name").fetch("examMachines", "id").findList();
         return ok(examRooms);
     }
 
     private ArrayNode asJson(List<User> users) {
-        ArrayNode array = JsonNodeFactory.instance.arrayNode();
-        for (User u : users) {
-            String name = String.format("%s %s", u.getFirstName(), u.getLastName());
+        var array = JsonNodeFactory.instance.arrayNode();
+        for (var u : users) {
+            var name = String.format("%s %s", u.getFirstName(), u.getLastName());
             if (u.getUserIdentifier() != null) {
                 name += String.format(" (%s)", u.getUserIdentifier());
             }
-            ObjectNode part = Json.newObject();
+            var part = Json.newObject();
             part.put("id", u.getId());
             part.put("firstName", u.getFirstName());
             part.put("lastName", u.getLastName());
@@ -124,55 +122,42 @@ public class ReservationController extends BaseController {
 
     @Restrict({ @Group("ADMIN"), @Group("TEACHER") })
     public Result getStudents(Optional<String> filter) {
-        ExpressionList<User> el = Ebean.find(User.class).where().eq("roles.name", "STUDENT");
+        var el = DB.find(User.class).where().eq("roles.name", "STUDENT");
         if (filter.isPresent()) {
             el = el.or().ilike("userIdentifier", String.format("%%%s%%", filter.get()));
             el = applyUserFilter(null, el, filter.get()).endOr();
         }
-        List<User> students = el.findList();
-        return ok(Json.toJson(asJson(students)));
+        return ok(Json.toJson(asJson(el.findList())));
     }
 
     @Restrict({ @Group("ADMIN") })
     public Result getTeachers(Optional<String> filter) {
-        ExpressionList<User> el = Ebean.find(User.class).where().eq("roles.name", "TEACHER");
+        var el = DB.find(User.class).where().eq("roles.name", "TEACHER");
         if (filter.isPresent()) {
             el = applyUserFilter(null, el.or(), filter.get()).endOr();
         }
-        List<User> teachers = el.findList();
-        return ok(Json.toJson(asJson(teachers)));
+        return ok(Json.toJson(asJson(el.findList())));
     }
 
     @Restrict({ @Group("ADMIN") })
     public CompletionStage<Result> removeReservation(long id, Http.Request request) throws NotFoundException {
-        DynamicForm df = formFactory.form().bindFromRequest(request);
-        String msg = df.get("msg");
-
-        ExamEnrolment enrolment = Ebean.find(ExamEnrolment.class).where().eq("reservation.id", id).findOne();
-
+        var enrolment = DB.find(ExamEnrolment.class).where().eq("reservation.id", id).findOne();
         if (enrolment == null) {
             throw new NotFoundException(String.format("No reservation with id %d for current user.", id));
         }
-
-        ExamParticipation participation = Ebean
-            .find(ExamParticipation.class)
-            .where()
-            .eq("exam", enrolment.getExam())
-            .findOne();
-
+        var participation = DB.find(ExamParticipation.class).where().eq("exam", enrolment.getExam()).findOne();
         if (participation != null) {
             return wrapAsPromise(
-                forbidden(String.format("sitnet_unable_to_remove_reservation (id=%d).", participation.getId()))
+                forbidden(String.format("i18n_unable_to_remove_reservation (id=%d).", participation.getId()))
             );
         }
-
-        Reservation reservation = enrolment.getReservation();
+        var reservation = enrolment.getReservation();
+        var msg = formFactory.form().bindFromRequest(request).get("msg");
         // Let's not send emails about historical reservations
         if (reservation.getEndAt().isAfter(DateTime.now())) {
-            User student = enrolment.getUser();
+            var student = enrolment.getUser();
             emailComposer.composeReservationCancellationNotification(student, reservation, msg, false, enrolment);
         }
-
         if (reservation.getExternalReservation() != null) {
             return externalReservationHandler.removeReservation(reservation, enrolment.getUser(), msg);
         } else {
@@ -185,26 +170,26 @@ public class ReservationController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result findAvailableMachines(Long reservationId) throws ExecutionException, InterruptedException {
-        Reservation reservation = Ebean.find(Reservation.class, reservationId);
+        var reservation = DB.find(Reservation.class, reservationId);
         if (reservation == null) {
             return notFound();
         }
-        PathProperties props = PathProperties.parse("(id, name)");
-        Query<ExamMachine> query = Ebean.createQuery(ExamMachine.class);
+        var props = PathProperties.parse("(id, name)");
+        var query = DB.createQuery(ExamMachine.class);
         props.apply(query);
 
-        List<ExamMachine> candidates = query
+        var candidates = query
             .where()
             .eq("room", reservation.getMachine().getRoom())
             .ne("outOfService", true)
             .ne("archived", true)
             .findList();
 
-        final Exam exam = getReservationExam(reservation);
-        Iterator<ExamMachine> it = candidates.listIterator();
+        var exam = getReservationExam(reservation);
+        var it = candidates.listIterator();
         while (it.hasNext()) {
-            ExamMachine machine = it.next();
-            if (!machine.hasRequiredSoftware(exam)) {
+            var machine = it.next();
+            if (exam.isPresent() && !machine.hasRequiredSoftware(exam.get())) {
                 it.remove();
             }
             if (machine.isReservedDuring(reservation.toInterval())) {
@@ -217,26 +202,29 @@ public class ReservationController extends BaseController {
     @Restrict({ @Group("ADMIN") })
     public Result updateMachine(Long reservationId, Http.Request request)
         throws ExecutionException, InterruptedException {
-        Reservation reservation = Ebean.find(Reservation.class, reservationId);
+        var reservation = DB.find(Reservation.class, reservationId);
 
         if (reservation == null) {
             return notFound();
         }
-        DynamicForm df = formFactory.form().bindFromRequest(request);
-        Long machineId = Long.parseLong(df.get("machineId"));
-        PathProperties props = PathProperties.parse("(id, name, room(id, name))");
-        Query<ExamMachine> query = Ebean.createQuery(ExamMachine.class);
+        var machineId = request.body().asJson().get("machineId").asLong();
+        var props = PathProperties.parse("(id, name, room(id, name))");
+        var query = DB.createQuery(ExamMachine.class);
         props.apply(query);
-        ExamMachine previous = reservation.getMachine();
-        ExamMachine machine = query.where().idEq(machineId).findOne();
+        var previous = reservation.getMachine();
+        var machine = query.where().idEq(machineId).findOne();
         if (machine == null) {
             return notFound();
         }
         if (!machine.getRoom().equals(reservation.getMachine().getRoom())) {
             return forbidden("Not allowed to change to use a machine from a different room");
         }
-        Exam exam = getReservationExam(reservation);
-        if (!machine.hasRequiredSoftware(exam) || machine.isReservedDuring(reservation.toInterval())) {
+        var exam = getReservationExam(reservation);
+        if (
+            exam.isEmpty() ||
+            !machine.hasRequiredSoftware(exam.get()) ||
+            machine.isReservedDuring(reservation.toInterval())
+        ) {
             return forbidden("Machine not eligible for choosing");
         }
         reservation.setMachine(machine);
@@ -250,14 +238,13 @@ public class ReservationController extends BaseController {
         return ok(machine, props);
     }
 
-    private Exam getReservationExam(Reservation reservation) throws InterruptedException, ExecutionException {
+    private Optional<Exam> getReservationExam(Reservation reservation) throws InterruptedException, ExecutionException {
         return reservation.getEnrolment().getExam() != null
-            ? reservation.getEnrolment().getExam()
+            ? Optional.of(reservation.getEnrolment().getExam())
             : collaborativeExamLoader
                 .downloadExam(reservation.getEnrolment().getCollaborativeExam())
                 .toCompletableFuture()
-                .get()
-                .orElse(null);
+                .get();
     }
 
     @Authenticated
@@ -272,19 +259,19 @@ public class ReservationController extends BaseController {
         Optional<String> end,
         Http.Request request
     ) {
-        ExpressionList<ExamEnrolment> query = Ebean
+        var query = DB
             .find(ExamEnrolment.class)
             .fetch("user", "id, firstName, lastName, email, userIdentifier")
             .fetch("exam", "id, name, state, trialCount, implementation")
             .fetch("exam.course", "code")
-            .fetch("exam.examOwners", "id, firstName, lastName", new FetchConfig().query())
-            .fetch("exam.parent.examOwners", "id, firstName, lastName", new FetchConfig().query())
+            .fetch("exam.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
+            .fetch("exam.parent.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
             .fetch("exam.examInspections.user", "id, firstName, lastName")
             .fetch("examinationEventConfiguration.examinationEvent")
             .where()
             .isNotNull("examinationEventConfiguration")
             .isNotNull("exam");
-        User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
+        var user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         if (user.hasRole(Role.Name.TEACHER)) {
             query =
                 query
@@ -296,23 +283,17 @@ public class ReservationController extends BaseController {
         }
 
         if (start.isPresent()) {
-            DateTime startDate = DateTime.parse(start.get(), ISODateTimeFormat.dateTimeParser());
+            var startDate = DateTime.parse(start.get(), ISODateTimeFormat.dateTimeParser());
             query = query.ge("examinationEventConfiguration.examinationEvent.start", startDate.toDate());
         }
 
         if (state.isPresent()) {
-            switch (state.get()) {
-                case "NO_SHOW":
-                    query = query.eq("noShow", true);
-                    break;
-                case "EXTERNAL_UNFINISHED":
-                case "EXTERNAL_FINISHED":
-                    query = query.isNull("id"); // Deliberately force an empty result set
-                    break;
-                default:
-                    query = query.eq("exam.state", Exam.State.valueOf(state.get())).eq("noShow", false);
-                    break;
-            }
+            query =
+                switch (state.get()) {
+                    case "NO_SHOW" -> query.eq("noShow", true);
+                    case "EXTERNAL_UNFINISHED", "EXTERNAL_FINISHED" -> query.isNull("id"); // Deliberately force an empty result set
+                    default -> query.eq("exam.state", Exam.State.valueOf(state.get())).eq("noShow", false);
+                };
         }
 
         if (studentId.isPresent()) {
@@ -333,7 +314,7 @@ public class ReservationController extends BaseController {
         }
 
         if (ownerId.isPresent() && user.hasRole(Role.Name.ADMIN)) {
-            Long userId = ownerId.get();
+            var userId = ownerId.get();
             query =
                 query
                     .disjunction()
@@ -341,7 +322,7 @@ public class ReservationController extends BaseController {
                     .eq("exam.parent.examOwners.id", userId)
                     .endJunction();
         }
-        List<ExamEnrolment> enrolments = query
+        var enrolments = query
             .orderBy("examinationEventConfiguration.examinationEvent.start")
             .findList()
             .stream()
@@ -349,19 +330,18 @@ public class ReservationController extends BaseController {
                 if (end.isEmpty()) {
                     return true;
                 }
-                DateTime endDate = DateTime.parse(end.get(), ISODateTimeFormat.dateTimeParser());
-                DateTime eventEnd = ee
+                var endDate = DateTime.parse(end.get(), ISODateTimeFormat.dateTimeParser());
+                var eventEnd = ee
                     .getExaminationEventConfiguration()
                     .getExaminationEvent()
                     .getStart()
                     .plusMinutes(ee.getExam().getDuration());
                 return eventEnd.isBefore(endDate);
             })
-            .collect(Collectors.toList());
+            .toList();
 
-        final Result result = ok(enrolments);
-
-        final Set<Long> anonIds = enrolments
+        var result = ok(enrolments);
+        var anonIds = enrolments
             .stream()
             .filter(ee -> ee.getExam().isAnonymous())
             .map(GeneratedIdentityModel::getId)
@@ -384,15 +364,15 @@ public class ReservationController extends BaseController {
         Optional<String> externalRef,
         Http.Request request
     ) {
-        ExpressionList<Reservation> query = Ebean
+        var query = DB
             .find(Reservation.class)
             .fetch("enrolment", "noShow, retrialPermitted")
             .fetch("user", "id, firstName, lastName, email, userIdentifier")
             .fetch("enrolment.exam", "id, name, state, trialCount, implementation")
             .fetch("enrolment.externalExam", "id, externalRef, finished")
             .fetch("enrolment.exam.course", "code")
-            .fetch("enrolment.exam.examOwners", "id, firstName, lastName", new FetchConfig().query())
-            .fetch("enrolment.exam.parent.examOwners", "id, firstName, lastName", new FetchConfig().query())
+            .fetch("enrolment.exam.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
+            .fetch("enrolment.exam.parent.examOwners", "id, firstName, lastName", FetchConfig.ofQuery())
             .fetch("enrolment.exam.examInspections.user", "id, firstName, lastName")
             .fetch("enrolment.exam.executionType", "type")
             .fetch("enrolment.collaborativeExam", "*")
@@ -401,7 +381,7 @@ public class ReservationController extends BaseController {
             .fetch("machine.room", "id, name, roomCode")
             .where();
 
-        User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
+        var user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         if (user.hasRole(Role.Name.TEACHER)) {
             query =
                 query
@@ -415,31 +395,31 @@ public class ReservationController extends BaseController {
         }
 
         if (start.isPresent()) {
-            DateTime startDate = DateTime.parse(start.get(), ISODateTimeFormat.dateTimeParser());
-            query = query.ge("startAt", startDate.toDate());
+            var startDate = DateTime.parse(start.get(), ISODateTimeFormat.dateTimeParser());
+            var offset = dateTimeHandler.getTimezoneOffset(startDate.withDayOfYear(1));
+            query = query.ge("startAt", startDate.plusMillis(offset));
         }
 
         if (end.isPresent()) {
-            DateTime endDate = DateTime.parse(end.get(), ISODateTimeFormat.dateTimeParser());
-            query = query.lt("endAt", endDate.toDate());
+            var endDate = DateTime.parse(end.get(), ISODateTimeFormat.dateTimeParser());
+            var offset = dateTimeHandler.getTimezoneOffset(endDate.withDayOfYear(1));
+            query = query.lt("endAt", endDate.plusMillis(offset));
         }
 
         if (state.isPresent()) {
-            switch (state.get()) {
-                case "NO_SHOW":
-                    query = query.eq("enrolment.noShow", true);
-                    break;
-                case "EXTERNAL_UNFINISHED":
-                    query = query.isNotNull("externalUserRef").isNull("enrolment.externalExam.finished");
-                    break;
-                case "EXTERNAL_FINISHED":
-                    query = query.isNotNull("externalUserRef").isNotNull("enrolment.externalExam.finished");
-                    break;
-                default:
-                    query =
-                        query.eq("enrolment.exam.state", Exam.State.valueOf(state.get())).eq("enrolment.noShow", false);
-                    break;
-            }
+            query =
+                switch (state.get()) {
+                    case "NO_SHOW" -> query.eq("enrolment.noShow", true);
+                    case "EXTERNAL_UNFINISHED" -> query
+                        .isNotNull("externalUserRef")
+                        .isNull("enrolment.externalExam.finished");
+                    case "EXTERNAL_FINISHED" -> query
+                        .isNotNull("externalUserRef")
+                        .isNotNull("enrolment.externalExam.finished");
+                    default -> query
+                        .eq("enrolment.exam.state", Exam.State.valueOf(state.get()))
+                        .eq("enrolment.noShow", false);
+                };
         }
 
         if (studentId.isPresent()) {
@@ -471,7 +451,7 @@ public class ReservationController extends BaseController {
         }
 
         if (ownerId.isPresent() && user.hasRole(Role.Name.ADMIN)) {
-            Long userId = ownerId.get();
+            var userId = ownerId.get();
             query =
                 query
                     .disjunction()
@@ -479,11 +459,9 @@ public class ReservationController extends BaseController {
                     .eq("enrolment.exam.parent.examOwners.id", userId)
                     .endJunction();
         }
-        Set<Reservation> reservations = query.orderBy("startAt").findSet();
-
-        final Result result = ok(reservations);
-
-        final Set<Long> anonIds = reservations
+        var reservations = query.orderBy("startAt").findSet();
+        var result = ok(reservations);
+        var anonIds = reservations
             .stream()
             .filter(r ->
                 r.getEnrolment() != null &&
