@@ -20,7 +20,7 @@ import be.objectify.deadbolt.java.actions.Restrict;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import controllers.base.BaseController;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.ExpressionList;
 import io.ebean.Query;
 import io.ebean.text.PathProperties;
@@ -28,7 +28,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import models.ExamEnrolment;
 import models.ExamInspection;
 import models.Language;
@@ -50,14 +49,14 @@ public class UserController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result listPermissions() {
-        return ok(Ebean.find(Permission.class).findList());
+        return ok(DB.find(Permission.class).findList());
     }
 
     @Restrict({ @Group("ADMIN") })
     public Result grantUserPermission(Http.Request request) {
         DynamicForm df = formFactory.form().bindFromRequest(request);
         String permissionString = df.get("permission");
-        User user = Ebean.find(User.class, df.get("id"));
+        User user = DB.find(User.class, df.get("id"));
         if (user == null) {
             return notFound();
         }
@@ -68,7 +67,7 @@ public class UserController extends BaseController {
             } catch (IllegalArgumentException e) {
                 return badRequest();
             }
-            Permission permission = Ebean.find(Permission.class).where().eq("type", type).findOne();
+            Permission permission = DB.find(Permission.class).where().eq("type", type).findOne();
             user.getPermissions().add(permission);
             user.update();
         }
@@ -79,12 +78,12 @@ public class UserController extends BaseController {
     public Result revokeUserPermission(Http.Request request) {
         DynamicForm df = formFactory.form().bindFromRequest(request);
         String permissionString = df.get("permission");
-        User user = Ebean.find(User.class, df.get("id"));
+        User user = DB.find(User.class, df.get("id"));
         if (user == null) {
             return notFound();
         }
         if (user.getPermissions().stream().anyMatch(p -> p.getValue().equals(permissionString))) {
-            Permission permission = Ebean
+            Permission permission = DB
                 .find(Permission.class)
                 .where()
                 .eq("type", Permission.Type.valueOf(permissionString))
@@ -98,7 +97,7 @@ public class UserController extends BaseController {
     @Restrict({ @Group("ADMIN") })
     public Result findUsers(Optional<String> filter) {
         PathProperties pp = PathProperties.parse("(*, roles(*), permissions(*))");
-        Query<User> query = Ebean.find(User.class);
+        Query<User> query = DB.find(User.class);
         pp.apply(query);
         List<User> results;
         if (filter.isPresent()) {
@@ -121,14 +120,14 @@ public class UserController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result addRole(Long uid, String roleName) {
-        User user = Ebean.find(User.class, uid);
+        User user = DB.find(User.class, uid);
         if (user == null) {
-            return notFound("sitnet_user_not_found");
+            return notFound("i18n_user_not_found");
         }
         if (user.getRoles().stream().noneMatch(r -> r.getName().equals(roleName))) {
-            Role role = Ebean.find(Role.class).where().eq("name", roleName).findOne();
+            Role role = DB.find(Role.class).where().eq("name", roleName).findOne();
             if (role == null) {
-                return notFound("sitnet_role_not_found");
+                return notFound("i18n_role_not_found");
             }
             user.getRoles().add(role);
             user.update();
@@ -138,14 +137,14 @@ public class UserController extends BaseController {
 
     @Restrict({ @Group("ADMIN") })
     public Result removeRole(Long uid, String roleName) {
-        User user = Ebean.find(User.class, uid);
+        User user = DB.find(User.class, uid);
         if (user == null) {
-            return notFound("sitnet_user_not_found");
+            return notFound("i18n_user_not_found");
         }
         if (user.getRoles().stream().anyMatch(r -> r.getName().equals(roleName))) {
-            Role role = Ebean.find(Role.class).where().eq("name", roleName).findOne();
+            Role role = DB.find(Role.class).where().eq("name", roleName).findOne();
             if (role == null) {
-                return notFound("sitnet_role_not_found");
+                return notFound("i18n_role_not_found");
             }
             user.getRoles().remove(role);
             user.update();
@@ -155,20 +154,9 @@ public class UserController extends BaseController {
 
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result getUsersByRole(String role) {
-        List<User> users = Ebean.find(User.class).where().eq("roles.name", role).orderBy("lastName").findList();
-        ArrayNode array = Json.newArray();
-        array.addAll(
-            users
-                .stream()
-                .map(u -> {
-                    ObjectNode part = Json.newObject();
-                    part.put("id", u.getId());
-                    part.put("name", String.format("%s %s", u.getFirstName(), u.getLastName()));
-                    return part;
-                })
-                .collect(Collectors.toList())
-        );
-        return ok(Json.toJson(array));
+        PathProperties pp = PathProperties.parse("(*, roles(*), permissions(*))");
+        List<User> users = DB.find(User.class).where().eq("roles.name", role).orderBy("lastName").findList();
+        return ok(users, pp);
     }
 
     private static ArrayNode asArray(List<User> users) {
@@ -189,13 +177,13 @@ public class UserController extends BaseController {
                     part.put("email", u.getEmail());
                     return part;
                 })
-                .collect(Collectors.toList())
+                .toList()
         );
         return array;
     }
 
     private List<User> findUsersByRoleAndName(String role, String nameFilter) {
-        ExpressionList<User> el = Ebean.find(User.class).where().eq("roles.name", role).disjunction();
+        ExpressionList<User> el = DB.find(User.class).where().eq("roles.name", role).disjunction();
         el = applyUserFilter(null, el, nameFilter);
         return el.endJunction().findList();
     }
@@ -212,7 +200,7 @@ public class UserController extends BaseController {
         Set<User> owners = new HashSet<>();
         owners.add(request.attrs().get(Attrs.AUTHENTICATED_USER));
         if (qid.isPresent()) {
-            Question question = Ebean.find(Question.class, qid.get());
+            Question question = DB.find(Question.class, qid.get());
             if (question == null) {
                 return notFound();
             }
@@ -224,17 +212,17 @@ public class UserController extends BaseController {
 
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result getExamInspectorsByRoleFilter(String role, Long eid, String criteria) {
-        List<ExamInspection> inspections = Ebean.find(ExamInspection.class).where().eq("exam.id", eid).findList();
+        List<ExamInspection> inspections = DB.find(ExamInspection.class).where().eq("exam.id", eid).findList();
         List<User> users = findUsersByRoleAndName(role, criteria);
-        users.removeAll(inspections.stream().map((ExamInspection::getUser)).collect(Collectors.toList()));
+        users.removeAll(inspections.stream().map((ExamInspection::getUser)).toList());
         return ok(Json.toJson(asArray(users)));
     }
 
     @Restrict({ @Group("TEACHER"), @Group("ADMIN") })
     public Result getUnenrolledStudents(Long eid, String criteria) {
-        List<ExamEnrolment> enrolments = Ebean.find(ExamEnrolment.class).where().eq("exam.id", eid).findList();
+        List<ExamEnrolment> enrolments = DB.find(ExamEnrolment.class).where().eq("exam.id", eid).findList();
         List<User> users = findUsersByRoleAndName("STUDENT", criteria);
-        users.removeAll(enrolments.stream().map((ExamEnrolment::getUser)).collect(Collectors.toList()));
+        users.removeAll(enrolments.stream().map((ExamEnrolment::getUser)).toList());
         return ok(Json.toJson(asArray(users)));
     }
 
@@ -242,7 +230,7 @@ public class UserController extends BaseController {
     @Restrict({ @Group("STUDENT") })
     public Result updateUserAgreementAccepted(Http.Request request) {
         Result result;
-        User user = Ebean
+        User user = DB
             .find(User.class)
             .fetch("roles", "name")
             .fetch("language")
@@ -266,7 +254,7 @@ public class UserController extends BaseController {
     public Result updateLanguage(Http.Request request) {
         User user = request.attrs().get(Attrs.AUTHENTICATED_USER);
         String lang = request.attrs().get(Attrs.LANG);
-        Language language = Ebean.find(Language.class, lang);
+        Language language = DB.find(Language.class, lang);
         if (language == null) {
             return badRequest("Unsupported language code");
         }
