@@ -23,7 +23,7 @@ import com.opencsv.CSVReader;
 import com.opencsv.CSVReaderBuilder;
 import com.opencsv.CSVWriter;
 import com.opencsv.exceptions.CsvException;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.ExpressionList;
 import java.io.File;
 import java.io.FileReader;
@@ -47,17 +47,18 @@ import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
 import org.jsoup.Jsoup;
 import org.jsoup.safety.Safelist;
-import play.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class CsvBuilderImpl implements CsvBuilder {
 
-    private static final Logger.ALogger logger = Logger.of(CsvBuilderImpl.class);
+    private final Logger logger = LoggerFactory.getLogger(CsvBuilderImpl.class);
 
     @Override
     public File build(Long startDate, Long endDate) throws IOException {
         Date start = new Date(startDate);
         Date end = new Date(endDate);
-        List<ExamRecord> examRecords = Ebean
+        List<ExamRecord> examRecords = DB
             .find(ExamRecord.class)
             .fetch("examScore")
             .where()
@@ -76,7 +77,7 @@ public class CsvBuilderImpl implements CsvBuilder {
 
     @Override
     public File build(Long examId, Collection<Long> childIds) throws IOException {
-        List<ExamRecord> examRecords = Ebean
+        List<ExamRecord> examRecords = DB
             .find(ExamRecord.class)
             .fetch("examScore")
             .where()
@@ -157,7 +158,7 @@ public class CsvBuilderImpl implements CsvBuilder {
                 logger.warn("Invalid input, unable to grade");
                 continue;
             }
-            ExpressionList<Exam> el = Ebean
+            ExpressionList<Exam> el = DB
                 .find(Exam.class)
                 .where()
                 .idEq(examId)
@@ -176,22 +177,17 @@ public class CsvBuilderImpl implements CsvBuilder {
             }
             String gradeName = records[1];
             GradeScale scale = exam.getGradeScale() == null ? exam.getCourse().getGradeScale() : exam.getGradeScale();
-            List<Grade> grades = Ebean
-                .find(Grade.class)
-                .where()
-                .eq("name", gradeName)
-                .eq("gradeScale", scale)
-                .findList();
+            List<Grade> grades = DB.find(Grade.class).where().eq("name", gradeName).eq("gradeScale", scale).findList();
             if (grades.isEmpty()) {
                 logger.warn("No grade found with name {}", gradeName);
             } else if (grades.size() > 1) {
                 logger.warn("Multiple grades found with name {}", gradeName);
             } else {
-                exam.setGrade(grades.get(0));
+                exam.setGrade(grades.getFirst());
                 exam.setGradedByUser(user);
                 exam.setGradedTime(DateTime.now());
                 exam.setState(Exam.State.GRADED);
-                exam.setAnswerLanguage(exam.getExamLanguages().get(0).getCode());
+                exam.setAnswerLanguage(exam.getExamLanguages().getFirst().getCode());
                 exam.setCreditType(exam.getExamType());
                 String feedback = records.length > 2 ? records[2] : null;
                 if (feedback != null && !feedback.isEmpty()) {
